<resources>
    <string name="app_name" translatable="false">RememBirthday</string>
    <string name="powered_by">Powered by</string>
    <string name="at">At</string>
    <string name="days_before">Day(s) before</string>
    <string name="developer">Developer</string>
    <string name="participation_title">Participation</string>
    <string name="features_title">Features</string>
    <string name="contact_title">Contact</string>
    <string name="anniversaries_title">Birthdays</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="select_contact_title">Select a contact</string>
    <string name="calendar_title">Calendar</string>
    <string name="reminder_title">Reminder</string>
    <string name="reminder_notification_title">Notification</string>
    <string name="auto_sms_content">Message Content</string>
    <string name="message_title">Message</string>
    <string name="auto_message_title">Auto-Message</string>
    <string name="call_title">Call</string>
    <string name="gift_title">Gift Manager</string>
    <string name="auto_sound_title">Auto-Vocal</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Synchronization</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_modify_contact">Modify contact</string>
    <string name="action_change_anniversary">Change Anniversary</string>
    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>
    <string name="about_version">Version:</string>
    <string name="tag_list_birthdays" translatable="false">TAG_LIST_BIRTHDAYS</string>
    <string name="dialog_select_birthday_title">Select Birthday</string>
    <string name="dialog_select_birthday_zero_day_left">Happy Birthday!</string>
    <string name="dialog_select_birthday_one_day_left">Birthday in only 1 day!</string>
    <string name="dialog_select_birthday_number_days_left">Birthday in %1$d days.</string>
    <string name="dialog_delete_birthday_title">Delete Birthday</string>
    <string name="dialog_delete_birthday_message">Are you sure you want to delete the anniversary date and related events ?</string>
    <string name="dialog_need_calendar_message">This feature needs the customized calendar to work, you can enable it in the settings.</string>
    <string name="dialog_need_special_feature_message">This feature needs the \"special features\" enabled to work, you can enable it in the settings.</string>
    <string name="dialog_pro_feature_message">This feature is available on the pro version currently in development.</string>
    <string name="dialog_pro_feature_positive_button">Download</string>
    <string name="dialog_startup_title">Thanks to download !</string>
    <string name="dialog_startup_negative_button">Cancel</string>
    <string name="dialog_startup_positive_button">Contribute</string>
    <string name="html_see_participation_page">See the participation page</string>
    <string name="html_text_purpose">This application is designed to &lt;strong&gt;easily manage the birthdays&lt;/strong&gt; of contacts on phones and tablets.</string>
    <string name="html_text_free">Unlike almost all of its competitors, it is &lt;strong&gt;without advertising&lt;/strong&gt; even in its free version.</string>
    <string name="html_text_donation">In order to keep our freedom and to be always active, we count on your &lt;strong&gt;contribution.&lt;/strong&gt;</string>
    <string name="html_text_integration">The application was built in order &lt;strong&gt;to integrate&lt;/strong&gt; at best &lt;strong&gt;the basic applications&lt;/strong&gt; of the device, with : </string>
    <string-array name="html_dialog_startup_text_features">
        <item>Managing contacts and syncing &lt;small&gt;(by synchronizing the associated contact and calendar account)&lt;/small&gt;</item>
        <item>Managing the calendar and events &lt;small&gt;(by the basic application)&lt;/small&gt;</item>
        <item>Sending message &lt;small&gt;(by the basic application)&lt;/small&gt;</item>
        <item>Contact call &lt;small&gt;(by the basic application)&lt;/small&gt;</item>
        <item>Sorting contacts with a birthday</item>
        <item>Management of the remaining days</item>
        <item>Integration of the signs of the zodiac &lt;small&gt;(in progress)&lt;/small&gt;</item>
        <item>Managing favorite contacts &lt;small&gt;(in progress)&lt;/small&gt;</item>
        <item>Theme management &lt;small&gt;(in progress)&lt;/small&gt;</item>
        <item>The addition of multiple and completely customizable notifications &lt;small&gt;(in progress - pro)&lt;/small&gt;</item>
        <item>Automatic sending of messages at a specific time &lt;small&gt;(in progress - pro)&lt;/small&gt;</item>
        <item>Management of gifts &lt;small&gt;(in progress - pro)&lt;/small&gt;</item>
        
    </string-array>
    <string name="html_text_bugs">A bug or a new feature : email me</string>
    <string name="activity_list_contacts_error_add">Error when adding</string>
    <string name="activity_list_contacts_success_add">Successful addition</string>
    <string name="activity_list_contacts_error_update">Error when updating</string>
    <string name="activity_list_contacts_success_update">Successful update</string>
    <string name="activity_list_contacts_error_remove">Error when removing</string>
    <string name="activity_list_contacts_success_remove">Successful removal</string>
    <string name="permission_read_contacts_start">The application needs to read your contacts to manage birthday data, we guarantee that this data is only visible to you and is not used by third parties.</string>
    <string name="permission_read_contacts_rationale">Read contact permissions are required to display the list of anniversaries.</string>
    <string name="permission_read_contacts_denied">The application will not be able to display contacts.</string>
    <string name="permission_write_contacts_rationale">Write contact permissions are required for their save in database.</string>
    <string name="permission_write_contacts_denied">The application will not be able to save birthdays in contacts.</string>
    <string name="permission_contacts_never_ask">Never Ask</string>
    <string name="permission_get_accounts_start">The application needs to get access to accounts to manage the custom calendar.</string>
    <string name="permission_get_accounts_rationale">Get Accounts permissions are required to manage the calendar.</string>
    <string name="permission_get_accounts_denied">The application will not be able to manage calendar.</string>
    <string name="permission_get_accounts_never_ask">Never Ask</string>
    <string name="permission_write_calendar_start">The application needs to write calendar to manage the custom calendar.</string>
    <string name="permission_write_calendar_rationale">Write calendar permissions are required to manage the calendar.</string>
    <string name="permission_write_calendar_denied">The application will not be able to manage calendar.</string>
    <string name="permission_write_calendar_never_ask">Never Ask</string>
    <string name="permission_send_sms_start">The application needs to send SMS to manage the Auto-SMS.</string>
    <string name="permission_send_sms_rationale">Send SMS permissions are required to manage the Auto-SMS.</string>
    <string name="permission_send_sms_denied">The application will not be able to send Auto-SMS.</string>
    <string name="permission_send_sms_never_ask">Never Ask</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="calendar_display_name">Birthdays</string>
    <string name="notifications_anniversary_title">Anniversary</string>
    <string name="notifications_anniversary_today">This is %1$s\'s birthday today.</string>
    <string name="notifications_anniversary_tomorrow">This will be %1$s\'s birthday tomorrow.</string>
    <string name="notifications_anniversary_later">This will be %1$s\'s birthday in %1$d days.</string>
    <string name="pref_category_calendar_title">Calendar</string>
    <string name="pref_open_calendar_key" translatable="false">open_calendar_key</string>
    <string name="pref_open_calendar_title">Open Calendar</string>
    <string name="pref_open_calendar_summary">Manage notifications directly in calendar</string>
    <string name="pref_create_calendar_key" translatable="false">create_calendar_key</string>
    <string name="pref_create_calendar_title">Customized calendar</string>
    <string name="pref_create_calendar_summary">Create a customized calendar for manage notifications</string>
    <string name="pref_create_calendar_default" translatable="false">false</string>
    <string name="pref_calendar_color_key" translatable="false">calendar_color_key</string>
    <string name="pref_calendar_color_title">Calendar color</string>
    <string name="pref_calendar_color_summary">Define the calendar color with [color]</string>
    <string name="pref_category_reminders_title">Reminders</string>
    <string name="pref_reminders_days_key" translatable="false">notifications_day_enable</string>
    <string name="pref_reminders_days_title">Default days</string>
    <string name="pref_reminders_days_summary">Ex : "0#2#7" Daemon notification visible on the day, 2 and 7 days before the event.</string>
    <string name="pref_reminders_days_default" translatable="false">0</string>
    <string name="pref_reminders_time_key" translatable="false">notifications_time_enable</string>
    <string name="pref_reminders_time_title">Default time</string>
    <string name="pref_reminders_time_summary">Demon Event Time : [time]</string>
    <string name="pref_reminders_time_default" translatable="false">10:00</string>
    <string name="pref_category_special_title">Special</string>
    <string name="pref_special_service_key" translatable="false">notifications_service_enable</string>
    <string name="pref_special_service_title">Powerful daemons</string>
    <string name="pref_special_service_summary">Creates daemons for gift management or automatic message sending.</string>
    <string name="pref_special_service_default" translatable="false">false</string>
    <string name="pref_auto_sms_reminders_key" translatable="false">auto_sms_reminders</string>
    <string name="pref_auto_sms_reminders_title">Auto-SMS Reminders</string>
    <string name="pref_auto_sms_reminders_summary">Remind before sending SMS.</string>
    <string name="pref_auto_sms_reminders_default" translatable="false">false</string>
    <string name="pref_hide_inactive_features_key" translatable="false">hide_inactive_feature</string>
    <string name="pref_hide_inactive_features_title">Hide inactive features</string>
    <string name="pref_hide_inactive_features_summary">Hide or show the buttons for inactive features</string>
    <string name="pref_hide_inactive_features_default" translatable="false">false</string>
    <string name="pref_category_contacts_sort_title">Contact sort</string>
    <string name="pref_contacts_sort_list_key" translatable="false">contacts_sort_list</string>
    <string name="pref_contacts_sort_list_title">Sort</string>
    <string name="pref_contacts_sort_list_summary">Select the sort mode of contacts</string>
    <string name="pref_contacts_sort_list_value_default" translatable="false">@string/pref_contacts_sort_list_value_days_left</string>
    <string name="pref_contacts_order_list_key" translatable="false">contacts_order_list</string>
    <string name="pref_contacts_order_list_title">Order</string>
    <string name="pref_contacts_order_list_summary">Ascending or Descending</string>
    <string name="pref_contacts_order_list_value_default" translatable="false">@string/pref_contacts_order_list_value_asc</string>
</resources>